fix: on mobile menu open no scroll

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -52,6 +52,11 @@ body {
   background-color: #FFF;
   color: #313131;
 }
+body.no-scroll {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
 
 a {
   color: #314D69;
