--- a/src/styles/sass/_general.sass
+++ b/src/styles/sass/_general.sass
@@ -11,6 +11,11 @@ body
     background-color: $secondaryColor
     color: $fontPrimaryColor
 
+    &.no-scroll
+        height: 100vh
+        width: 100vw
+        overflow: hidden
+
 a
     color: $fontHighlightColor
     text-decoration: none
